# high_volatility_stocks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  constants.py  docker-compose.yaml  finviz.py  main.py  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 783330ddd084_change_some_fileds_of_stock_model_to_.py  b75961d4b222_first_migration.py
backend/: .dockerignore  Dockerfile  alembic.ini  barchart_interaction.py  constants.py  db_interaction.py  finviz.py  finviz_interaction.py  models.py  root_logger.py  schema.py  server.py  utils.py
backend/app/: server.py
backend/app/alembic/: env.py
backend/app/constants/: browser.py  db.py
backend/app/db/: crud_operations.py  handle_requests.py
backend/app/sites_interaction/: barchart.py  finviz.py
backend/app/utils/: handle_errors.py  modify_data.py
backend/constants/: browser.py
backend/db/: crud_operations.py  handle_requests.py
backend/logger/: root.py
backend/sites_interaction/: barchart.py  finviz.py
backend/utils/: handle_errors.py  handle_lists.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/API/: fetchStocksData.js
frontend/src/App/: AppBody.jsx  AppHeader.jsx  AppHeader.styles.js  AppHome.js
frontend/src/components/: StocksFetchResults.jsx
frontend/src/constants/: index.js  table.js  urls.js
frontend/src/pages/: AllStocksPage.jsx  ChartsPage.js  ChartsPage.styles.js  StockPage.jsx  StockPage.styles.js  StocksTablePage.jsx
frontend/src/routers/: AppRouter.js
frontend/src/services/: fetchApi.js
(+41 files in other folders)
