[tool.poetry]
name = "high_volatility_stocks_backend"
version = "0.1.0"
description = ""
authors = ["Pavel Mitichkin <balancy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
pandas = "^1.3.2"
requests = "^2.26.0"
lxml = "^4.6.3"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
