[tool.poetry]
name = "high_volatility_stocks_backend"
version = "0.1.0"
description = ""
authors = ["balancy"]

[tool.poetry.dependencies]
python = "3.9.7"
lxml = "^4.6.3"
pandas = "^1.3.2"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
