[tool.poetry]
name = "high_volatility_stocks"
version = "0.1.0"
description = ""
authors = ["balancy"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
FastAPI-SQLAlchemy = "^0.2.1"
alembic = "^1.7.1"
psycopg = "^3.0b1"
loguru = "^0.5.3"
requests = "^2.26.0"
lxml = "^4.6.3"
APScheduler = "^3.7.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
